fix(footer): update Twitter label to YouTube and enable social links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Udhay Kumar | QA Automation Specialist</title>
+
+  <meta name="description"
+    content="Senior QA Automation Engineer with expertise in Selenium, Java, API testing, CI/CD, and modern QA practices.">
+  <meta name="keywords" content="QA Engineer, Selenium, Automation Testing, Java, API Testing, Playwright">
+  <meta name="author" content="Udhaya Kumar Sekar">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta property="og:title" content="Udhaya Kumar | QA Portfolio">
+  <meta property="og:description" content="Automation | API | CI/CD | QA Engineering">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./assets/images/profile.jpg">
+
   <link rel="stylesheet" href="./src/input.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -236,9 +250,9 @@
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
       <p class="text-slate-500">© 2025 Udhay Portfolio. All Rights Reserved.</p>
       <div class="flex gap-6 text-slate-400">
-        <a href="#" class="hover:text-white transition">LinkedIn</a>
-        <a href="#" class="hover:text-white transition">GitHub</a>
-        <a href="#" class="hover:text-white transition">Twitter</a>
+        <a href="https://www.linkedin.com/in/udhaya-kumar-s-556215382/" target="_blank" class="hover:text-white transition">LinkedIn</a>
+        <a href= "https://github.com/UdhayaKumarSekar" target="_blank" class="hover:text-white transition">GitHub</a>
+        <a href= "https://www.youtube.com/@MIT_Career_Hub" target="_blank" class="hover:text-white transition">YouTube</a>
       </div>
     </div>
   </footer>
