--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Udhay Kumar</title>
+  <meta name="description"
+    content="Senior QA Automation Engineer with expertise in Selenium, Java, API testing, CI/CD, and modern QA practices.">
+  <meta name="keywords" content="QA Engineer, Selenium, Automation Testing, Java, API Testing, Playwright">
+  <meta name="author" content="Udhaya Kumar Sekar">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta property="og:title" content="Udhaya Kumar | QA Portfolio">
+  <meta property="og:description" content="Automation | API | CI/CD | QA Engineering">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./assets/images/profile.jpg">
+
+
   <link rel="stylesheet" href="./src/input.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -90,7 +104,8 @@
             </div>
             <div>
               <p class="text-sm text-slate-500">Phone</p>
-              <a href="tel:+919042494034" class="text-xl font-medium hover:text-secondary-400 transition">+91 90424 94034 </a>
+              <a href="tel:+919042494034" class="text-xl font-medium hover:text-secondary-400 transition">+91 90424
+                94034 </a>
             </div>
           </div>
 
