--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills | Udhay Kumar</title>
+
+  <meta name="description"
+    content="Senior QA Automation Engineer with expertise in Selenium, Java, API testing, CI/CD, and modern QA practices.">
+  <meta name="keywords" content="QA Engineer, Selenium, Automation Testing, Java, API Testing, Playwright">
+  <meta name="author" content="Udhaya Kumar Sekar">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta property="og:title" content="Udhaya Kumar | QA Portfolio">
+  <meta property="og:description" content="Automation | API | CI/CD | QA Engineering">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./assets/images/profile.jpg">
+
   <link rel="stylesheet" href="./src/input.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
