fix: load compiled Tailwind CSS to restore styles and animations

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="./assets/images/profile.jpg">
 
-  <link rel="stylesheet" href="./src/input.css" />
+  <!-- <link rel="stylesheet" href="./src/input.css" /> -->
+  <link rel="stylesheet" href="./dist/output.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -28,7 +29,7 @@
 </head>
 
 <body class="bg-dark-900 text-white overflow-x-hidden selection:bg-secondary-500 selection:text-white overflow-hidden">
-
+  
   <!-- Cinematic Intro Overlay -->
   <!-- Cinematic Intro Overlay -->
   <div id="intro-overlay"
@@ -115,10 +116,6 @@
         </li>
       </ul>
 
-      <!-- Mobile Menu Button (Placeholder) -->
-      <button class="md:hidden text-white text-2xl">
-        &#9776;
-      </button>
     </nav>
   </header>
 
@@ -250,9 +247,11 @@
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
       <p class="text-slate-500">© 2025 Udhay Portfolio. All Rights Reserved.</p>
       <div class="flex gap-6 text-slate-400">
-        <a href="https://www.linkedin.com/in/udhaya-kumar-s-556215382/" target="_blank" class="hover:text-white transition">LinkedIn</a>
-        <a href= "https://github.com/UdhayaKumarSekar" target="_blank" class="hover:text-white transition">GitHub</a>
-        <a href= "https://www.youtube.com/@MIT_Career_Hub" target="_blank" class="hover:text-white transition">YouTube</a>
+        <a href="https://www.linkedin.com/in/udhaya-kumar-s-556215382/" target="_blank"
+          class="hover:text-white transition">LinkedIn</a>
+        <a href="https://github.com/UdhayaKumarSekar" target="_blank" class="hover:text-white transition">GitHub</a>
+        <a href="https://www.youtube.com/@MIT_Career_Hub" target="_blank"
+          class="hover:text-white transition">YouTube</a>
       </div>
     </div>
   </footer>
