--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="./assets/images/profile.jpg">
 
-  <link rel="stylesheet" href="./src/input.css" />
+  <!-- <link rel="stylesheet" href="./src/input.css" /> -->
+  <link rel="stylesheet" href="./dist/output.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
